--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleentfaar/tissue",
+  "name": "metromix/tissue",
   "description": "A PHP library that scans your files for viruses using the adapter of your choice",
   "keywords": [
     "anti-virus",
@@ -18,8 +18,8 @@
   ],
   "require": {
     "php": ">=5.4",
-    "symfony/options-resolver": "~2.2",
-    "symfony/process": "~2.2"
+    "symfony/options-resolver": "3.0.*",
+    "symfony/process": "3.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.2"
