--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "symfony/options-resolver": "~5.0",
-    "symfony/process": "~5.0"
+    "php": "^7.3.11",
+    "symfony/options-resolver": "5.0.*",
+    "symfony/process": "5.0.*"
   },
   "autoload": {
     "psr-4": {
