--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require": {
-    "php": "^7.3.11",
+    "php": "^7.3.11|^8.0",
     "symfony/options-resolver": "5.0.*",
     "symfony/process": "5.0.*"
   },
